@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Make identity name field optional (#1489510)
 - Utility script to remove user records from the local database
 - Plugin API: Added message_saved hook (#1489752)
 - Support messages import from zip archives
@@ -10,10 +11,10 @@ CHANGELOG Roundcube Webmail
 - Search across multiple folders (#1485234)
 - Improve UI integration of ACL settings
 - Drop support for PHP < 5.3.7
-- Apply user-specific replacements to group's base_dn property (#1489779)
 - Set In-Reply-To and References for forwarded messages (#1489593)
 - Removed redundant default_folders config option (#1489737)
 - Implemented IMAP SPECIAL-USE extension support [RFC6154] (#1487830)
+- Apply user-specific replacements to group's base_dn property (#1489779)
 - Fix mbox files import
 - Fix bug where "With attachment" option in search filter wasn't selected after return from mail view (#1489774)
 - Fix "washing" of unicoded style attributes (#1489777)
